// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNextBar renders \`null\` when passed a page that isn't in the book tree 1`] = `
<div
  className="PrevNextBar__BarWrapper-sc-13m2i12-3 fEZPiF"
  data-analytics-region="prev-next"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="PrevNextBar__HidingContentLink-sc-13m2i12-2 TdchT"
    data-analytics-label="next"
    href="books/book-slug-1/pages/test-page-1"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="PrevNextBar__RightArrow-sc-13m2i12-1 hAIJlW StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders \`null\` with no page or book 1`] = `null`;

exports[`PrevNextBar renders correctly when you pass a page and book 1`] = `
<div
  className="PrevNextBar__BarWrapper-sc-13m2i12-3 fEZPiF"
  data-analytics-region="prev-next"
>
  <a
    aria-label="Previous Page"
    className="PrevNextBar__HidingContentLink-sc-13m2i12-2 eMxlJc"
    data-analytics-label="prev"
    href="books/book-slug-1/pages/2-test-page-3"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="PrevNextBar__LeftArrow-sc-13m2i12-0 bBoLai StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <a
    aria-label="Next Page"
    className="PrevNextBar__HidingContentLink-sc-13m2i12-2 TdchT"
    data-analytics-label="next"
    href="books/book-slug-1/pages/4-test-page-5"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="PrevNextBar__RightArrow-sc-13m2i12-1 hAIJlW StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`next\` element correctly 1`] = `
<div
  className="PrevNextBar__BarWrapper-sc-13m2i12-3 fEZPiF"
  data-analytics-region="prev-next"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="PrevNextBar__HidingContentLink-sc-13m2i12-2 TdchT"
    data-analytics-label="next"
    href="books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="PrevNextBar__RightArrow-sc-13m2i12-1 hAIJlW StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`prev\` element correctly 1`] = `
<div
  className="PrevNextBar__BarWrapper-sc-13m2i12-3 fEZPiF"
  data-analytics-region="prev-next"
>
  <a
    aria-label="Previous Page"
    className="PrevNextBar__HidingContentLink-sc-13m2i12-2 eMxlJc"
    data-analytics-label="prev"
    href="books/book-slug-1/pages/d-glossary-of-key-symbols-and-notation"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="PrevNextBar__LeftArrow-sc-13m2i12-0 bBoLai StyledIconBase-sc-bdy9j4 jbPeIR"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <span
    aria-hidden={true}
  />
</div>
`;
